--- a/src/Dinner.API/Dinner.API.csproj
+++ b/src/Dinner.API/Dinner.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>8a58869b-f2bb-420e-9dad-2e1a98e00855</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
